--- a/alum/index.html
+++ b/alum/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h2 class="logo">Almaties</h2>
+        <h2 class="logo">AlmaTies</h2>
         <div class="buttons">
             <button class="register" onclick="window.location.href='register.html'">REGISTER</button>
             <button class="login" onclick="window.location.href='login.html'">LOGIN</button>
