--- a/alum/login.html
+++ b/alum/login.html
@@ -165,7 +165,7 @@
 </head>
 <body>
     <header>
-        <h2 class="logo" onclick="window.location.href='index.html'">Alumnus Portal System</h2>
+        <h2 class="logo" onclick="window.location.href='index.html'">AlmaTies</h2>
         <div class="buttons">
             <button class="register" onclick="window.location.href='register.html'">REGISTER</button>
             <button class="login" onclick="window.location.href='login.html'">LOGIN</button>
