chat and community forum

--- a/alum/dashboard.html
+++ b/alum/dashboard.html
@@ -184,7 +184,7 @@
                     <p>View and edit your personal profile information</p>
                 </div>
                 
-                <div class="nav-card" onclick="window.location.href='community.html'">
+                <div class="nav-card" onclick="window.location.href='forum.html'">
                     <div class="nav-icon">👥</div>
                     <h3>Community Forum</h3>
                     <p>Join discussions with students and alumni</p>
