--- a/alum/register.html
+++ b/alum/register.html
@@ -148,7 +148,7 @@
 </head>
 <body>
     <header>
-        <h2 class="logo" onclick="window.location.href='index.html'">Almaties</h2>
+        <h2 class="logo" onclick="window.location.href='index.html'">AlmaTies</h2>
         <div class="buttons">
             <button class="register" onclick="window.location.href='register.html'">REGISTER</button>
             <button class="login" onclick="window.location.href='login.html'">LOGIN</button>
