--- a/alum/login.html
+++ b/alum/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Almaties - Login</title>
+    <title>AlmaTies - Login</title>
     <style>
         /* Reset & Font */
         * {
