--- a/alum/chat.html
+++ b/alum/chat.html
@@ -1,57 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>SheCircle | Inbox</title>
   <style>
     * {
-      margin: 0;
-      padding: 0;
       box-sizing: border-box;
       font-family: 'Segoe UI', sans-serif;
     }
 
-    body, html {
-      height: 100%;
-      background: url('alum/alum.jpeg') no-repeat center center fixed;
-      background-size: cover;
-      position: relative;
-      color: #fff;
-    }
-
-    body::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(255, 255, 255, 0.4);
-      backdrop-filter: blur(8px);
-      z-index: 0;
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #fefefe;
+      color: #333;
     }
 
     .overlay {
-      position: relative;
-      z-index: 1;
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      background-color: #fafafa;
       padding: 2rem;
     }
 
     .inbox-container {
-      background: rgba(255, 255, 255, 0.85);
-      padding: 2rem 2.5rem;
+      background-color: #ffffff;
+      padding: 2.5rem;
       border-radius: 20px;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
-      width: 90%;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+      width: 100%;
       max-width: 600px;
     }
 
     h1 {
-      color: #d62d6b;
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
       text-align: center;
+      color: #cc3366;
+      margin-bottom: 1.5rem;
+    }
+
+    .search-bar {
+      margin-bottom: 1.5rem;
+    }
+
+    .search-bar input {
+      width: 100%;
+      padding: 0.7rem 1rem;
+      border: 1.8px solid #f4c2c2;
+      border-radius: 25px;
+      font-size: 1rem;
+      transition: 0.3s ease;
+    }
+
+    .search-bar input:focus {
+      border-color: #cc3366;
+      outline: none;
+      box-shadow: 0 0 5px rgba(204, 51, 102, 0.2);
     }
 
     .alumni {
@@ -59,7 +64,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 1rem 0;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid #f2f2f2;
     }
 
     .alumni:last-child {
@@ -75,40 +80,41 @@
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      margin-right: 1rem;
       object-fit: cover;
+      margin-right: 1rem;
+      border: 2px solid #f4c2c2;
     }
 
     .alumni-name {
-      font-size: 1.1rem;
+      font-size: 1rem;
       font-weight: 600;
-      color: #333;
+      color: #444;
     }
 
     .chat-btn {
-      background: #d62d6b;
-      color: white;
+      background-color: #f4c2c2;
+      color: #fff;
       border: none;
       padding: 0.5rem 1rem;
       border-radius: 20px;
-      cursor: pointer;
       font-weight: 600;
-      transition: background 0.3s;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
     }
 
     .chat-btn:hover {
-      background: #b91e56;
+      background-color: #cc3366;
     }
 
     @media (max-width: 600px) {
       .inbox-container {
-        padding: 1.5rem;
+        padding: 2rem 1.2rem;
       }
 
       .alumni {
         flex-direction: column;
         align-items: flex-start;
-        gap: 0.5rem;
+        gap: 0.6rem;
       }
 
       .chat-btn {
@@ -120,14 +126,58 @@
 <body>
   <div class="overlay">
     <div class="inbox-container">
-      <h1>Chat Inbox</h1>
+      <h1>Let's Connect</h1>
+      <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Search alumni...">
+      </div>
       <div id="chatInbox">
+        <!-- Sample alumni chat list -->
         <div class="alumni">
           <div class="profile">
             <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
             <div class="alumni-name">Urja Sharma</div>
           </div>
           <button class="chat-btn" onclick="startChat('Urja Sharma')">Chat</button>
+        </div>
+
+        <div class="alumni">
+          <div class="profile">
+            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
+            <div class="alumni-name">Aanchal Taneja</div>
+          </div>
+          <button class="chat-btn" onclick="startChat('Aanchal Taneja')">Chat</button>
+        </div>
+
+        <div class="alumni">
+          <div class="profile">
+            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
+            <div class="alumni-name">Jigisha Kohli</div>
+          </div>
+          <button class="chat-btn" onclick="startChat('Jigisha Kohli')">Chat</button>
+        </div>
+
+        <div class="alumni">
+          <div class="profile">
+            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
+            <div class="alumni-name">Kanika Vij</div>
+          </div>
+          <button class="chat-btn" onclick="startChat('Kanika Vij')">Chat</button>
+        </div>
+
+        <div class="alumni">
+          <div class="profile">
+            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
+            <div class="alumni-name">Trisha Sachdeva</div>
+          </div>
+          <button class="chat-btn" onclick="startChat('Trisha Sachdeva')">Chat</button>
+        </div>
+
+        <div class="alumni">
+          <div class="profile">
+            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
+            <div class="alumni-name">Priya Arora</div>
+          </div>
+          <button class="chat-btn" onclick="startChat('Priya Arora')">Chat</button>
         </div>
 
         <div class="alumni">
@@ -146,38 +196,29 @@
           <button class="chat-btn" onclick="startChat('Sweta Sharma')">Chat</button>
         </div>
 
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Nikita Singh</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Nikita Singh')">Chat</button>
-        </div>
-
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Ritika Verma</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Ritika Verma')">Chat</button>
-        </div>
-
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Aakriti Ahuja</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Ananya Pal')">Chat</button>
-        </div>
+        <!-- Add more alumni as needed -->
       </div>
     </div>
   </div>
 
   <script>
+    
     function startChat(fullName) {
       const encodedName = encodeURIComponent(fullName);
       window.location.href = `dm.html?name=${encodedName}`;
     }
+  
+
+    const searchInput = document.getElementById("searchInput");
+    searchInput.addEventListener("input", function () {
+      const filter = searchInput.value.toLowerCase();
+      const alumniList = document.querySelectorAll(".alumni");
+
+      alumniList.forEach(alum => {
+        const name = alum.querySelector(".alumni-name").textContent.toLowerCase();
+        alum.style.display = name.includes(filter) ? "flex" : "none";
+      });
+    });
   </script>
 </body>
 </html>
