--- a/alum/forum.html
+++ b/alum/forum.html
@@ -12,35 +12,53 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
+      height: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fdfdfd url('alum/alum.jpeg') no-repeat center center fixed;
-      background-size: cover;
       position: relative;
       color: #333;
-      min-height: 100vh;
+      background: linear-gradient(
+          to bottom right,
+          rgba(255, 220, 240, 0.6),
+          rgba(220, 235, 255, 0.6)
+        ),
+        url('alum/alum.jpeg') no-repeat center center fixed;
+      background-size: cover;
     }
 
-    /* Overlay */
+    /* Soft light glow over the background */
     body::before {
       content: '';
-      position: absolute;
+      position: fixed;
       inset: 0;
-      background: rgba(255, 255, 255, 0.7);
-      backdrop-filter: blur(8px);
+      background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0.7) 10%,
+        rgba(255, 255, 255, 0.5) 100%
+      );
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
       z-index: 0;
     }
 
-    header {
+    /* Container Glassmorphic Panels */
+    header, main {
       position: relative;
       z-index: 1;
+      background: rgba(255, 255, 255, 0.7);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
+      border-radius: 24px;
+      margin: 2rem auto;
+      max-width: 880px;
+      padding: 2rem;
+      transition: all 0.3s ease;
+    }
+
+    header {
       text-align: center;
-      padding: 2rem 1rem;
-      background: rgba(255, 255, 255, 0.8);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-      border-radius: 0 0 20px 20px;
     }
 
     header h1 {
@@ -48,31 +66,22 @@
       color: #ff5f9e;
       font-weight: 700;
       letter-spacing: 1px;
-      text-shadow: 0 2px 6px rgba(255, 105, 135, 0.2);
+      text-shadow: 0 2px 4px rgba(255, 105, 135, 0.15);
     }
 
     .description {
+      margin-top: 1rem;
       font-size: 1.2rem;
-      color: #6b6b6b;
+      color: #666;
       font-style: italic;
-      margin-top: 0.5rem;
     }
 
     main {
-      position: relative;
-      z-index: 1;
-      max-width: 960px;
-      margin: 3rem auto;
-      padding: 2rem;
-      background: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(12px);
-      border-radius: 24px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.08);
-      border: 1px solid rgba(0, 0, 0, 0.05);
-      color: #333;
-      transition: all 0.3s ease;
+      margin-top: 1.5rem;
+      padding: 2rem 2.5rem;
     }
 
+    /* Responsive Design */
     @media (max-width: 768px) {
       header h1 {
         font-size: 2.2rem;
@@ -88,7 +97,7 @@
       }
     }
 
-    /* Smooth transitions */
+    /* Transitions */
     body, header, main {
       transition: all 0.4s ease-in-out;
     }
@@ -107,7 +116,6 @@
     <hyvor-talk-comments
       website-id="13038"
       page-id="alumni-forum">
-      
     </hyvor-talk-comments>
   </main>
 
