--- a/alum/dashboard.html
+++ b/alum/dashboard.html
@@ -192,7 +192,7 @@ header {
 </head>
 <body>
     <header>
-        <h2 class="logo" onclick="window.location.href='index.html'">AlmaTies</h2>
+        <h2 class="logo" onclick="window.location.href='dashboard.html'">AlmaTies</h2>
         <div class="user-profile">
             <!-- <div class="profile-pic">U</div> -->
             <i class="fas fa-user-circle user-icon"></i> <!-- 👈 Profile icon here -->
