--- a/alum/chat.html
+++ b/alum/chat.html
@@ -12,7 +12,11 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #fefefe;
+      background: linear-gradient(
+    to bottom right,
+    rgba(255, 220, 240, 0.6),
+    rgba(220, 235, 255, 0.6)
+  );
       color: #333;
     }
 
