--- a/alum/dashboard.html
+++ b/alum/dashboard.html
@@ -195,7 +195,7 @@ header {
         <h2 class="logo" onclick="window.location.href='dashboard.html'">AlmaTies</h2>
         <div class="user-profile">
             <!-- <div class="profile-pic">U</div> -->
-            <i class="fas fa-user-circle user-icon"></i> <!-- 👈 Profile icon here -->
+            <i class="fas fa-user-circle user-icon" onclick="window.location.href='profile.html'"></i> <!-- 👈 Profile icon here -->
             <button class="logout-btn" onclick="window.location.href='index.html'">LOGOUT</button>
         </div>
     </header>
