--- a/alum/profile.html
+++ b/alum/profile.html
@@ -25,7 +25,7 @@
       <img class="w-32 h-32 rounded-full border-4 border-primary shadow-lg" src="https://i.pravatar.cc/150?img=32" alt="Profile Picture" />
       <div>
         <h1 class="text-3xl font-extrabold text-gray-800">Aarohi Sharma</h1>
-        <p class="text-primary font-medium">B.Tech CSE '27</p>
+        <p class="text-primary font-medium">Student | B.Tech CSE '27</p>
         <p class="mt-2 text-gray-600 text-sm">Interests: AI, Web Development</p>
       </div>
     </div>
@@ -33,7 +33,7 @@
     <div class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-6">
       <!-- Academic Info -->
       <div class="bg-indigo-50 p-4 rounded-xl shadow-inner">
-        <h2 class="text-lg font-semibold text-gray-700 mb-2">🎓 Academic Details</h2>
+        <h2 class="text-lg font-semibold text-gray-700 mb-2"><b>Academic Details</b></h2>
         <ul class="text-gray-600 text-sm space-y-1">
           <li><strong>Department:</strong> CSE</li>
           <li><strong>Student ID:</strong> CSE270123</li>
@@ -44,7 +44,7 @@
 
       <!-- Skills & Projects -->
       <div class="bg-indigo-50 p-4 rounded-xl shadow-inner">
-        <h2 class="text-lg font-semibold text-gray-700 mb-2">🛠️ Skills & Projects</h2>
+        <h2 class="text-lg font-semibold text-gray-700 mb-2"><b>Skills & Projects</b></h2>
         <ul class="text-gray-600 text-sm space-y-1">
           <li><strong>Skills:</strong> Python, React, TensorFlow</li>
           <li><strong>Projects:</strong>
@@ -59,7 +59,7 @@
 
     <!-- Achievements -->
     <div class="mt-6 bg-indigo-50 p-4 rounded-xl shadow-inner">
-      <h2 class="text-lg font-semibold text-gray-700 mb-2">🏆 Achievements</h2>
+      <h2 class="text-lg font-semibold text-gray-700 mb-2"><b>Achievements</b></h2>
       <ul class="text-gray-600 text-sm list-disc list-inside">
         <li>Top 5 in HackOverflow 2024</li>
         <li>Completed AI Foundations by IBM</li>
